[package]
edition = '2018'
name = "rm-improved"
version = "0.13.8"
authors = ["nivekuil <mail@nivekuil.com>", "Lucas Burns <lmb@lmburns.com>"]
description = "rip: a safe and ergonomic alternative to rm (fork)"
repository = "https://github.com/lmburns/rip"
readme = "README.md"
license = "GPL-3.0+"
include = [
    "**/*.rs",
    "Cargo.toml",
]
categories = ["command-line-utilities"]
autobins = false

[dependencies]
walkdir = "1"
time = "0.1"
error-chain = "0.12"
colored = "2.0.0"
chrono = "0.4.19"
anyhow = "1.0.42"
glob = "0.3.0"
globwalk = "0.8.1"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
tabwriter = "1.2.1"

[profile.release]
strip = true
lto = "thin"

[[bin]]
name = "rip"
path = "src/main.rs"
