[package]
edition = "2021"
name = "rm-improved"
version = "0.14.0"
authors = ["nivekuil <mail@nivekuil.com>", "Lucas Burns <lmb@lmburns.com>", "Aidan Pinard <aidan@aidanpinard.co>"]
description = "rip: a safe and ergonomic alternative to rm (fork of fork)"
repository = "https://github.com/jeiang/rip"
readme = "README.md"
license = "GPL-3.0+"
include = [
    "**/*.rs",
    "Cargo.toml",
]
categories = ["command-line-utilities"]
autobins = false

[dependencies]
walkdir = "2"
colored = "2" # TODO: remove
chrono = "0.4"
eyre = "0.6"
glob = "0.3.0"
globwalk = "0.8.1"
tabwriter = "1.2.1"
clap = {version = "4.1.9", features = [ "derive", "cargo" ] }
clap_complete = "4.1.5"
once_cell = "1.17.1" # Resolve version collision between eyre & clap v4
owo-colors = "3.5.0"
anstream = {version = "0.2.6", features = [ "auto" ] }
clap_complete_command = "0.5.1"

[profile.release]
strip = true
lto = "thin"

[[bin]]
name = "rip"
path = "src/main.rs"
